--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ buildscript {
 
     repositories {
         jcenter()
+        mavenLocal()
+        maven { url 'https://dl.bintray.com/qwwdfsad/kotlinx/' }
         maven { url 'https://plugins.gradle.org/m2/' }
         maven { url kotlin_repository }
         maven { url 'https://dl.bintray.com/jetbrains/kotlin-native-dependencies' }
@@ -49,6 +51,7 @@ allprojects {
 
     repositories {
         mavenLocal()
+        maven { url 'https://dl.bintray.com/qwwdfsad/kotlinx/' }
         maven { url 'https://dl.bintray.com/kotlin/kotlinx/' }
         maven { url kotlin_repository }
         maven { url "https://dl.bintray.com/kotlin/kotlin-dev" }
