--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ kotlin_native_version=1.3.10
 # kotlin libraries
 kotlinx_io_version=0.1.1
 serialization_version=0.9.1
-coroutines_version=1.0.1
+coroutines_version=1.1.0-qww
 atomic_fu_version=0.11.12
 
 # server
